--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
+    android:padding="25dp"
     tools:context="com.example.anderson.discente1.MainActivity">
 
     <Space
@@ -13,22 +13,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <EditText
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:textCursorDrawable="@android:color/holo_blue_dark"
+        android:hint="CEP"
+        android:gravity="center"
         android:id="@+id/endereco"
-        android:text="txt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
-        android:layout_marginVertical="50dp"
+        android:layout_marginVertical="20dp"
         android:textAlignment="center"
         android:text="Detalhes"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:onClick="showDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:gravity="center|bottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Developed by Anderson A. Fontana - 152058@upf.br" />
 
 </LinearLayout>
